--- a/.github/ISSUE_TEMPLATE/issue.yaml
+++ b/.github/ISSUE_TEMPLATE/issue.yaml
@@ -1,5 +1,5 @@
 name: Video Idea
-description: Suggest an Episode for Genius Lounge
+description: Suggest an Episode for Genius Lounge's YouTube Channel
 title: "[Video Idea]: "
 labels: [video idea]
 assignees:
