--- a/.github/ISSUE_TEMPLATE/issue.yaml
+++ b/.github/ISSUE_TEMPLATE/issue.yaml
@@ -21,42 +21,15 @@ body:
     id: idea-details
     attributes:
       label: "What's your episode idea?"
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      placeholder: Tell us what you think we should create an episode about here.
     validations:
       required: true
   - type: dropdown
-    id: version
+    id: mobile-type
     attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: Android or iPhone?
       options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
+        - Android
+        - iPhone
     validations:
       required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
